Add learning rate scheduler

--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -13,16 +13,21 @@ DATASET:
   SPLIT_RATIO: 0.7
 
 TRAIN:
-  IMAGE_SIZE: [224, 224]
-  BATCH_SIZE: 32
-  SHUFFLE: True
-  BEGIN_EPOCH: 0
-  END_EPOCH: 1
-  LAST_EPOCH: 0
-  OPTIMIZER: "AdamW"
-  MEAN: [0.48667304, 0.47782094, 0.44596779]
-  STD: [0.20571293, 0.20116103, 0.20227837]
-  RESUME: False
+  DATA:
+    IMAGE_SIZE: [224, 224]
+    BATCH_SIZE: 32
+    SHUFFLE: True
+    MEAN: [0.48667304, 0.47782094, 0.44596779]
+    STD: [0.20571293, 0.20116103, 0.20227837]
+  TRAIN_PARA:
+    MODEL_TYPE: 1 #{1: Resnet50, 2: DenseNet201, 3: VGG19, 4: ConvNeXt_Large, 5: Swim}
+    BEGIN_EPOCH: 0
+    END_EPOCH: 1
+    LAST_EPOCH: 0
+    OPTIMIZER: "AdamW"
+    RESUME: False
+    SAVE_MODEL: True
+    SAVE_METRICS: TRUE
 
 
 TEST:
