Add Save checkpoint and best function

--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -26,7 +26,9 @@ TRAIN:
     LAST_EPOCH: 0
     OPTIMIZER: "AdamW"
     RESUME: False
-    SAVE_MODEL: True
+  OPTIONAL:
+    SAVE_CHECKPOINT: TRUE
+    SAVE_BEST: TRUE
     SAVE_METRICS: TRUE
 
 
