--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -27,12 +27,11 @@ TRAIN:
     OPTIMIZER: "AdamW"
     RESUME: False
   OPTIONAL:
-    SAVE_CHECKPOINT: TRUE
-    CHECKPOINT_PATH: "/content/checkpoint.pth"
+    CHECKPOINT_PATH: "./resume_model/checkpoint.pth"
     SAVE_BEST: TRUE
-    BEST_PATH: "/content/best.pth"
+    BEST_PATH: "./best_model/checkpoint.pth"
     SAVE_METRICS: TRUE
-    METRICS_PATH: "/content/metrics.csv"
+    METRICS_PATH: "./metrics/metrics.csv"
 
 
 TEST:
