--- a/config/VNHerb_config.yaml
+++ b/config/VNHerb_config.yaml
@@ -17,8 +17,8 @@ TRAIN:
     IMAGE_SIZE: [256, 256]
     BATCH_SIZE: 128
     SHUFFLE: True
-    MEAN: None
-    STD: None
+    MEAN: [0.66707758, 0.66282453, 0.57892942]
+    STD: [0.20133319, 0.20586158, 0.20954071]
   TRAIN_PARA:
     MODEL_TYPE: 1 #{1: Resnet50, 2: DenseNet201, 3: VGG19, 4: ConvNeXt_Large, 5: MobileNet}
     BEGIN_EPOCH: 0
