--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -1,6 +1,8 @@
-GPUS: (0,1,2,3)
-WORKERS: 4
-PRINT_FREQ: 1
+# GPUS: (0,1,2,3)
+# WORKERS: 4
+# PRINT_FREQ: 1
+
+DDP_TRAIN: FALSE
 
 DATASET:
   DATASET_NAME: CIFAR10
