--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -14,6 +14,13 @@ DATASET:
   SELECTION_RATIO: 1
   SPLIT_RATIO: 0.7
 
+DATASET_EXTRACT:
+  DATASET_INFO: "../Info.csv"
+  ZIP_FILE_PATH: "../Dataset/Ảnh"
+  EXTRACT_PATH: "../DTLHerb"
+  MIN_IMG: 100
+  MAX_IMG: 9999
+
 TRAIN:
   DATA:
     IMAGE_SIZE: [256, 256]
