--- a/config/DTLHerb_config.yaml
+++ b/config/DTLHerb_config.yaml
@@ -12,13 +12,22 @@ DATASET:
   SELECTION_RATIO: 1
   SPLIT_RATIO: 0.7
 
+DATASET_EXTRACT:
+  DATASET_INFO: "./config/Info.csv"
+  ZIP_FILE_PATH: "../Dataset/Ảnh"
+  EXTRACT_PATH: "../DTLHerb"
+  MIN_IMG: 100
+  MAX_IMG: 9999
+
 TRAIN:
   DATA:
     IMAGE_SIZE: [256, 256]
-    BATCH_SIZE: 128
+    BATCH_SIZE: 256
     SHUFFLE: True
-    MEAN: [0.66707758, 0.66282453, 0.57892942]
-    STD: [0.20133319, 0.20586158, 0.20954071]
+    # MEAN: [0.66707758, 0.66282453, 0.57892942]
+    # STD: [0.20133319, 0.20586158, 0.20954071]
+    MEAN: NULL
+    STD: NULL
   TRAIN_PARA:
     MODEL_TYPE: 1 #{1: Resnet50, 2: DenseNet201, 3: VGG19, 4: ConvNeXt_Large, 5: MobileNet}
     BEGIN_EPOCH: 0
@@ -36,8 +45,8 @@ TRAIN:
   AUG:
     CUTMIX: [TRUE, 0.5]
     MIXUP: [TRUE, 0.5]
-    FMIX: [FALSE, 0.5]
+    FMIX: [TRUE, 0.5]
 
 TEST:
-  BATCH_SIZE: 32
+  BATCH_SIZE: 256
 
