--- a/config/DTLHerb_config.yaml
+++ b/config/DTLHerb_config.yaml
@@ -4,10 +4,10 @@ PRINT_FREQ: 1
 
 DATASET:
   DATASET_NAME: VNHerb-data
-  ROOT: "../datasets"
-  ROOT_FOLDER: "./datasets/VNHerb"
-  TRAIN_FOLDER: "./datasets/train"
-  TEST_FOLDER: "./datasets/test"
+  ROOT: "../DTLHerb"
+  ROOT_FOLDER: "../DTLHerb"
+  TRAIN_FOLDER: "../train"
+  TEST_FOLDER: "../test"
   ZIP_FOLDER: "./datasets/Cifar10.zip"
   SELECTION_RATIO: 1
   SPLIT_RATIO: 0.7
@@ -24,13 +24,9 @@ TRAIN:
     IMAGE_SIZE: [256, 256]
     BATCH_SIZE: 256
     SHUFFLE: True
-    # MEAN: [0.66707758, 0.66282453, 0.57892942]
-    # STD: [0.20133319, 0.20586158, 0.20954071]
     # 447
     MEAN: [0.66565923, 0.66174304, 0.57747589] 
     STD: [0.20152938, 0.20600946, 0.209565]
-    # MEAN: NULL
-    # STD: NULL
   TRAIN_PARA:
     MODEL_TYPE: 1 #{1: Resnet50, 2: DenseNet201, 3: VGG19, 4: ConvNeXt_Large, 5: MobileNet}
     BEGIN_EPOCH: 0
@@ -39,7 +35,7 @@ TRAIN:
     OPTIMIZER: "AdamW"
     RESUME: False
     EARLY_STOPPING: TRUE
-    PATIENCE: 10
+    PATIENCE: 5
 
   OPTIONAL:
     SAVE_CHECKPOINT: TRUE
