--- a/config/DTLHerb_config.yaml
+++ b/config/DTLHerb_config.yaml
@@ -48,6 +48,21 @@ TRAIN:
     CUTMIX: [TRUE, 0.5]
     MIXUP: [TRUE, 0.5]
     FMIX: [TRUE, 0.5]
+  LEARNING_RATE:
+    PieceWise:
+      START_LR: 0.0001
+      MAX_LR: 0.0005
+      MIN_LR: 0.0001
+      RAMPUP_EPOCHS: 10
+      SUSTAIN_EPOCHS: 5
+      EXP_DECAY: 0.8
+    WarmupCosine: 
+      START_LR: 0.00001
+      MAX_LR: 0.00005
+      MIN_LR: 0.00003
+      RAMPUP_EPOCHS: 5
+      SUSTAIN_EPOCHS: 30
+      COS_DECAY: 15
 
 TEST:
   BATCH_SIZE: 256
